[gd_scene load_steps=5 format=2]

[ext_resource path="res://SeesawScene.gd" type="Script" id=1]
[ext_resource path="res://SeesawPlayer.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 40 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="SeesawPlayer" parent="." instance=ExtResource( 2 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = -40.0
margin_right = 130.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
margin_left = 11.0
margin_top = 22.0
margin_right = 66.0
margin_bottom = 52.0
rect_rotation = 90.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Werk"

[node name="Area2D2" type="Area2D" parent="ColorRect"]
position = Vector2( -250, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Area2D2"]
position = Vector2( 255, 40 )
shape = SubResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -130.0
margin_top = -40.0
margin_right = -120.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2"]
margin_left = 11.0
margin_top = 18.0
margin_right = 66.0
margin_bottom = 48.0
rect_rotation = 90.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Leven"

[node name="Area2D" type="Area2D" parent="ColorRect2"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ColorRect2/Area2D"]
position = Vector2( 5, 40 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]

[connection signal="area_entered" from="ColorRect/Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_entered" from="ColorRect2/Area2D" to="." method="_on_Area2D_area_entered"]
